# jsonrpc

./: .gitignore  CMakeLists.txt  README.md  client.go  json.c  json.h  jsonrpc-c.c  jsonrpc-c.h  jsonrpc.c  jsonrpc.h  server.c
examples/: CMakeLists.txt  client.c  client.go  server.c
